# quadruped_locomotion_kp

free_gait_core_kp/: CMakeLists.txt  package.xml
free_gait_core_kp/include/: TypeDefs.hpp  TypePrints.hpp
free_gait_core_kp/include/base_motion.hpp/: BaseAuto.hpp  BaseMotionBase.hpp  BaseTarget.hpp  BaseTrajectory.hpp  base_motion.hpp
free_gait_core_kp/include/executor/: AdapterBase.hpp  BatchExecutor.hpp  Executor.hpp  ExecutorState.hpp  State.hpp  StateBatch.hpp  StateBatchComputer.hpp  executor.hpp
free_gait_core_kp/include/leg_motion/: EndEffectorMotionBase.hpp  EndEffectorTarget.hpp  EndEffectorTrajectory.hpp  Footstep.hpp  JointMotionBase.hpp  JointTrajectory.hpp  LegMode.hpp  LegMotionBase.hpp  leg_motion.hpp
free_gait_core_kp/include/pose_optimization/: pose_optimization.hpp
free_gait_core_kp/include/step/: Step.hpp  StepQueue.hpp
free_gait_core_kp/src/: TypeDefs.cpp  TypePrints.cpp
free_gait_core_kp/src/base_motion/: BaseAuto.cpp  BaseMotion.cpp  BaseTarget.cpp  BaseTrajectory.cpp
free_gait_core_kp/src/executor/: AdapterBase.cpp  BatchExecutor.cpp  Executor.cpp  ExecutorState.cpp  StateBatch.cpp  StateBatchComputer.cpp  state.cpp
free_gait_core_kp/src/leg_motion/: EndEffectorMotionBase.cpp  EndEffectorTarget.cpp  EndEffectorTrajectory.cpp  Footstep.cpp  JointMotionBase.cpp  JointTrajectory.cpp  LegMode.cpp  LegMotionBase.cpp
free_gait_core_kp/src/step/: CustomCommand.cpp  Step.cpp  StepQueue.cpp
quadruped_model_kp/: CMakeLists.txt  package.xml
quadruped_model_kp/include/quadruped_model_kp/: quadruped_kinematics.h  quadruped_model.hpp  quadruped_state.h
quadruped_model_kp/include/quadruped_model_kp/common/: typedefs.hpp
quadruped_model_kp/src/: quadruped_kinematics.cpp  quadruped_model.cpp  quadruped_state.cpp
